# practicasIC

./: README.md
Practica1/: Práctica 1.docx
Practica2/canny-git/: HashMap.cpp  README.md  canny.cpp  canny.out  main  main.cpp  makefile  sobel.out  tiempos.gnuplot
Practica2/canny-git/header_files/: HashMap.hpp
Practica2/canny-git/mains/: mainFast  mainNoOpt  mainO1  mainO2  mainO3
Practica2/canny-git/output_images/: canny_final.pgm  canny_mag.pgm  canny_peaks.pgm  sobel_hi.pgm  sobel_lo.pgm  sobel_mag.pgm  sobel_x.pgm  sobel_y.pgm
Practica2/canny-git/tiempoCompilacion/: compilacion_O1.txt
Practica2/canny-git/tiempoEjecucion/: tiempoFast.txt  tiempoNoOpt.txt  tiempoO1.txt  (+2 more)
Practica2/canny-opencv/: HashMap.cpp  canny  canny.cpp  canny.out  main.cpp  makefile  xd.txt
Practica3/: README.md  blockchain.cc  makefile  miner.h  server.cc  test  test.cc
Practica3/blockchain/: block.h  socket.h  test  test.cc
Practica3/neuroevolutivo/: CMakeLists.txt  README.md
Practica4/: README.md
Practica4/Evolution/: CMakeLists.txt
Practica4/Evolution/src/: CMakeLists.txt  main.cc
Practica4/Evolution/src/genetic/: genetic.cc  simulation.cc
Practica4/Evolution/src/mlp/: activation.h  layer.cc  layer.h  mlp.cc
Practica4/Evolution/src/utils/: CMakeLists.txt  utils.h
Practica4/calcularPI/: Makefile  README.md  calcularPI  calcularPI.cc  calcularPI_sec  calcularPI_sec.cc
Practica4/multMatrices/: Makefile  README.md  host_files  mult_par  mult_par.cc  mult_sec  mult_sec.cc
Practica4/prueba/: Makefile  enlaces_MPI.txt  host_files  mpi_hello_world  mpi_hello_world.c
(+22 files in other folders)
